# fastapi-project-template

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 291d482808f5_init.py
src/: main.py
src/core/: config.py  database.py  models.py
